dashboard/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    traefik: enabled
