dashboard/manifests/13-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: dashboard
  labels:
    app: postgresql
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
