dashboard/manifests/31-dashboard-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-api
  namespace: dashboard
  labels:
    app: dashboard-api
spec:
  type: ClusterIP
  selector:
    app: dashboard-api
  ports:
    - port: 8000
      targetPort: 8000
