dashboard/manifests/43-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-frontend
  namespace: dashboard
  labels:
    app: dashboard-frontend
spec:
  type: ClusterIP
  selector:
    app: dashboard-frontend
  ports:
    - port: 80
      targetPort: 80
